<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment_ProfileData">

    <LinearLayout
        android:id="@+id/ll_FPD"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/TextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/fpd_title"></TextView>


        <EditText
            android:id="@+id/et_FPdFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/fpd_firstName"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


        <EditText
            android:id="@+id/et_FPDLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/fpd_lastName"

            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_FPDHandleName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/fpd_userName"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />




            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_search_12"
                android:background="#0000"
                ></ImageButton>


        </LinearLayout>

        <EditText
            android:id="@+id/et_FPDDream"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="top|left"
            android:hint="@string/fpd_dream"
            android:inputType="textMultiLine"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


        <EditText
            android:id="@+id/et_FPDChallenge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="top|left"
            android:hint="@string/fpd_dream"
            android:inputType="textMultiLine"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


        <EditText
            android:id="@+id/et_FPDCountry"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="top|left"
            android:hint="@string/fpd_country"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"

            />


        <EditText
            android:id="@+id/et_FPDState"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/fpd_state"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


        <Button
            android:id="@+id/btnFPDSubmit"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Save" />
    </LinearLayout>
</LinearLayout>