<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/itemFriendsInvite"
        android:icon="@drawable/ic_group_add_black_24dp"
        android:orderInCategory="100"
        android:title="main Item"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_menu_black_24dp"
        android:orderInCategory="100"
        android:title="main Item"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_SetupData"
                android:title="@string/menu_setUp"
                app:showAsAction="never"></item>


            <item
                android:id="@+id/Support"
                android:title="@string/menu_support"
                app:showAsAction="never"></item>

            <item
                android:id="@+id/YourFeedback"
                android:title="@string/menu_feedback"
                app:showAsAction="never"></item>

            <item
                android:id="@+id/menulogout"
                android:title="Logout"
                app:showAsAction="never"></item>


        </menu>
    </item>
</menu>
