<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ActivityIntegrity">

    <LinearLayout
        android:id="@+id/ll_Integrity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:elevation="@dimen/commonElevation" />

        <TextView
            style="@style/TextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/commonMargin"
            android:text="@string/Activity_Integrity_Heading"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/ll_AI_margin"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/in_date"
                android:layout_width="@dimen/et_AI_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/commonMargin_10dp"
                android:background="@drawable/my_border"
                android:enabled="false"
                android:gravity="center_vertical"
                android:hint="@string/Integrity_Date_Hint"
                android:padding="@dimen/commonPadding" />

            <Button
                android:id="@+id/btn_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/Integrity_Date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/ll_AI_margin"

            android:orientation="horizontal">

            <EditText
                android:id="@+id/in_time"
                android:layout_width="@dimen/et_AI_width"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_10dp"
                android:background="@drawable/my_border"
                android:enabled="false"
                android:hint="@string/Integrity_Time_Hint"
                android:padding="@dimen/commonPadding" />

            <Button
                android:id="@+id/btn_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Integrity_Time" />
        </LinearLayout>


        <EditText
            android:id="@+id/in_et_Promise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="@dimen/commonMargin"
            android:layout_marginBottom="@dimen/et_margineBottom"
            android:background="@drawable/my_border"
            android:gravity="top|left"
            android:hint="@string/Integrity_EditBox_Hint"
            android:inputType="textMultiLine"
            android:lines="2"
            android:outlineAmbientShadowColor="@color/main_color"
            android:padding="@dimen/commonPadding"
            android:scrollbars="vertical" />

        <Button
            android:id="@+id/in_btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/commonMargin"
            android:background="@drawable/button_border_material"
            android:text="Submit" />

        <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/listIntegrity"
            android:name="com.example.myapplication.ActivityIntegrity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/commonPaddingBottom_RecyclerView"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="app.actionnation.actionapp.ActivityIntegrity"
            tools:listitem="@layout/lf_integritytracking" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_act_int_finish"
        style="@style/MyMaterialTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:text="@string/Common_Win"
        android:textColor="@color/plain_white"
        app:icon="@drawable/ic_baseline_task_24"
        app:iconTint="@color/plain_white" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>