<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gratitude">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/ll_gratitude"
        >

        <TextView
            style="@style/TextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/Fragment_Gr_Heading"></TextView>

        <Button
            android:id="@+id/gt_btn_gratitudelist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="10dp"
            android:background="@drawable/button_border"
            android:text="@string/Data_ADD"
            android:textColor="#02b89a" />


        <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/listGratitude"
            android:name="com.example.myapplication.ActivityIntegrity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            tools:listitem="@layout/lf_distractionlist" />
        <Button
            android:id="@+id/btn_happiness_finish"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/Common_Win"></Button>


    </LinearLayout>


</FrameLayout>